Clean up Redis, database, and serializer code paths
- Guard against null/malformed Redis payloads in checkout clearing,
  check-in petitions, version parsing, and reversed map bound lookup
- Log (at debug) instead of silently swallowing the unsubscribe error
  during Redis reconnection
- Replace redundant regex replaceAll with literal replace in schema
  table formatting
- Drop unused Collectors import and switch to Stream.toList() in the
  Bukkit world-save listener
- Simplify SerializerRegistry.getIdentifier to a plain loop, removing
  the unused Collectors import